# scene

./: .gitignore  README.md  pyproject.toml
R/audit/: 00_check_r_environment.R  01_audit_vector_data.R  02_audit_tabular_data.R  03_audit_raster_data.R  04_audit_cross_source_keys.R
config/: audit.yaml  data.yaml  model.yaml  paths.yaml  preprocess.yaml
configs/: project.yaml
metadata/: 20260723_215806_KST_column_inventory.csv  20260723_215806_KST_external_code_inventory.csv  20260723_215806_KST_file_inventory.csv  20260723_215806_KST_join_audit.csv  20260723_215806_KST_layer_inventory.csv  20260723_215806_KST_project_structure.txt  20260723_215806_KST_raster_inventory.csv  20260723_215806_KST_validation.json
metadata/inventory/: 20260724_001842_KST_source_inventory.json  20260724_001842_KST_source_inventory.parquet  20260724_002007_KST_source_inventory.json  20260724_002007_KST_source_inventory.parquet  20260724_023225_KST_source_inventory.json  20260724_023225_KST_source_inventory.parquet  20260724_095729_KST_source_inventory.json  20260724_095729_KST_source_inventory.parquet  20260724_095752_KST_source_inventory.json  20260724_095752_KST_source_inventory.parquet  20260724_100322_KST_source_inventory.json  20260724_100322_KST_source_inventory.parquet  20260724_100345_KST_source_inventory.json  20260724_100345_KST_source_inventory.parquet  20260724_100709_KST_source_inventory.json  (+3 more)
scripts/: print_project_tree.sh  run_project_audit.sh  validate_m1_7_contracts.py
src/scene/: README.md  (+3 more)
tests/: conftest.py  test_miniature_dataset.py  test_release_validation.py
(+222 files in other folders)
