[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-representation"
version = "0.1.0"
description = "Spatial scene representation learning implementation"
requires-python = ">=3.14"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
scene = "scene.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scene*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
