[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-representation"
version = "0.1.0"
description = "Spatial scene representation learning implementation"
requires-python = ">=3.14"
dependencies = [
    "GDAL>=3.12,<3.13",
    "GeoPandas>=1.0",
    "NumPy>=2.0",
    "PyArrow>=22.0",
    "PyOGRIO>=0.12",
    "PyProj>=3.7",
    "PyYAML>=6.0",
    "Shapely>=2.1",
]

[project.scripts]
scene = "scene.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scene*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
